avoid overflow-x when gutenberg fullwidth layout logo img appearence fixed

--- a/assets/src/sass/frontend/_header.scss
+++ b/assets/src/sass/frontend/_header.scss
@@ -48,12 +48,7 @@
     }
 
     img {
-      max-width: 100%;
-      max-height: 60px;
-      @include up($large) {
-        max-width: 180px;
-        max-height: none;
-      }
+      max-width: 13rem;
     }
   }
 
